# chessmate

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHECKMATE_DETECTION.md  CHECKMATE_IMPLEMENTATION_SUMMARY.txt  CHECKMATE_TEST_GUIDE.md  DOCUMENTATION_AUDIT.md  DOCUMENTATION_REORGANIZATION_SUMMARY.md  DX_PLATFORM_SUMMARY.md  GAME_FEATURES_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  PHASE_1_IMPLEMENTATION_REPORT.md  README.md  SYSTEM_GUIDE.md  UPGRADE_MINIMALIST_PRO.md  docker-compose.yml  jest.config.cjs  package.json  tsconfig.json
account-api/: .env.example  .gitignore  Dockerfile  GETTING_STARTED.md  README.md  alembic.ini  pyproject.toml  service.yaml
account-api/app/: main.py
account-api/app/api/: dependencies.py  models.py
account-api/app/core/: __init__.py  config.py  constants.py  exceptions.py  logging.py  security.py
account-api/app/infrastructure/: repositories.py
account-api/bruno/collections/: account-api.bru  get-current-account.bru  get-internal-account.bru  get-public-profile.bru  health.bru  patch-current-account.bru  patch-preferences.bru  patch-privacy-settings.bru  patch-profile-details.bru  post-internal-account.bru
account-api/bruno/environments/: local.env  production.env  staging.env
account-api/bruno/tests/: account-lifecycle-flow.test.bru
account-api/docs/: ARCHITECTURE.md  GETTING_STARTED.md  README.md  RUNBOOK.md  api.md  domain.md  operations.md  overview.md
account-api/docs/decisions/: README.md
account-api/docs/how-to/: common-tasks.md  local-dev.md  troubleshooting.md
account-api/docs/migrations/: README.md  phase-1.md
account-api/migrations/: env.py
account-api/migrations/versions/: 001_initial.py
account-api/requirements/: base.txt  dev.txt
account-api/tests/: conftest.py
account-api/tests/integration/: test_account_e2e.py
engine-cluster-api/: Dockerfile  README.md  pyproject.toml  service.yaml
engine-cluster-api/app/: main.py
engine-cluster-api/app/core/: config.py
engine-cluster-api/app/domain/: candidate.py  evaluate_request.py  evaluate_response.py  models.py
engine-cluster-api/app/engine/: evaluator.py
engine-cluster-api/bruno/collections/: engine-cluster-api.bru  health.bru  post-analyze.bru
engine-cluster-api/bruno/environments/: local.env  production.env  staging.env
engine-cluster-api/docs/: README.md  RUNBOOK.md  api.md  architecture.md  domain.md  operations.md  overview.md
engine-cluster-api/docs/decisions/: README.md
engine-cluster-api/docs/how-to/: local-dev.md
engine-cluster-api/docs/migrations/: README.md  phase-1.md
engine-cluster-api/requirements/: base.txt
engine-cluster-api/tests/: test_engine.py
live-game-api/: .env.example  .gitignore  Dockerfile  ENFORCEMENT_ENDPOINTS_TO_ADD.py  GETTING_STARTED.md  README.md  SCAFFOLD_SUMMARY.md  alembic.ini  pyproject.toml  service.yaml
live-game-api/app/: __init__.py  main.py
live-game-api/app/api/: bot_game_request.py  create_game_request.py  dependencies.py  game_response.py  game_summary_response.py  health_response.py  join_game_request.py  models.py  move_response.py  play_move_request.py  player_response.py  time_control_request.py
live-game-api/app/core/: config.py  exceptions.py  metrics.py  security.py  tracing.py
live-game-api/bruno/collections/: get-game.bru  get-move-history.bru  health.bru  live-game-api.bru  post-create-bot-game.bru  post-create-game.bru  post-join-game.bru  post-play-move.bru  post-resign.bru
live-game-api/bruno/environments/: local.env  production.env  staging.env
live-game-api/bruno/tests/: complete-game-flow.test.bru
live-game-api/docs/: ARCHITECTURE.md  GETTING_STARTED.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE3_FRONTEND_GUIDE.md  RATED_UNRATED_IMPLEMENTATION.md  README.md  RUNBOOK.md  __init__.py  api.md  domain.md  operations.md  overview.md
live-game-api/docs/decisions/: README.md
live-game-api/docs/how-to/: common-tasks.md  local-dev.md  troubleshooting.md
live-game-api/docs/migrations/: README.md  phase-1.md
live-game-api/migrations/: env.py
live-game-api/migrations/versions/: 001_initial.py  002_rated_unrated_logic.py  003_add_bot_support.py
live-game-api/requirements/: base.txt  dev.txt  prod.txt
live-game-api/tests/: conftest.py
live-game-api/tests/integration/: test_bot_games_api.py  test_games_api.py
matchmaking-api/: .env.example  .gitignore  Dockerfile  IMPLEMENTATION.md  QUICKREF.md  README.md  alembic.ini  pyproject.toml  service.yaml
matchmaking-api/app/: main.py
matchmaking-api/app/api/: active_matchmaking_response.py  challenge_request.py  challenge_response.py  dependencies.py  models.py  opponent_info.py  queue_request.py  queue_response.py  queue_status_response.py  queue_summary.py  queues_summary_response.py
matchmaking-api/app/clients/: rating_client.py
matchmaking-api/app/core/: config.py  exceptions.py  metrics.py  security.py  tracing.py
matchmaking-api/app/repositories/: __init__.py  postgres_ticket_repository.py  ticket_repository.py
matchmaking-api/app/schemas/: __init__.py  ticket.py
matchmaking-api/app/workers/: __init__.py  matchmaking_worker.py  reaper.py
matchmaking-api/bruno/collections/: delete-cancel-queue.bru  get-active-matchmaking.bru  get-incoming-challenges.bru  get-queue-status.bru  get-ticket-status.bru  matchmaking-api.bru  patch-update-ticket.bru  post-accept-challenge.bru  post-accept-proposal.bru  post-cancel-ticket.bru  post-create-challenge.bru  post-decline-challenge.bru  post-enqueue-ticket.bru  post-join-queue-new.bru  (+3 more)
matchmaking-api/docs/: ARCHITECTURE.md  README.md  RUNBOOK.md  api.md  domain.md  operations.md  overview.md  service-spec.md
matchmaking-api/migrations/: env.py
matchmaking-api/requirements/: base.txt  dev.txt
matchmaking-api/tests/: conftest.py
rating-api/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  service.yaml
rating-api/app/: main.py
rating-api/docs/: ARCHITECTURE.md  README.md  RUNBOOK.md  api.md  domain.md  operations.md  overview.md
rating-api/migrations/: env.py
rating-api/requirements/: base.txt  dev.txt
rating-api/tests/: conftest.py
(+1472 files in other folders)
